# reindeer

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  lint  rust-toolchain
.circleci/: config.yml
.github/: dotslash-config.json
.github/actions/setup_linux_env/: action.yml
.github/workflows/: build-and-test.yml  release.yml
docs/: MANUAL.md  README.md
example/: .buckconfig  README.md  setup.sh
example/project/: BUCK  test.rs
examples/01-intro/: .buckconfig  BUCK  README.md  reindeer.toml  setup.sh
examples/01-intro/project/: BUCK
examples/01-intro/project/src/: main.rs
examples/02-hybrid/: .gitignore  Cargo.toml  README.md  reindeer.toml  setup.sh
examples/02-hybrid/project/: BUCK  Cargo.toml
examples/02-hybrid/project/src/: main.rs
examples/02-hybrid/toolchains/: BUCK
examples/03-complex-fixups/: .buckconfig  PACKAGE  README.md  reindeer.toml  setup.sh
examples/03-complex-fixups/config/: set_cfg_constructor.bzl
examples/03-complex-fixups/config/mode/: BUCK
examples/03-complex-fixups/config/mode/constraints/: BUCK
examples/03-complex-fixups/project/: BUCK  test.rs
src/: audit_sec.rs  buck.rs  buckify.rs  cargo.rs  cfg.rs  collection.rs  config.rs  default_platforms.toml  fixups.rs  glob.rs  index.rs  lib.rs  lockfile.rs  main.rs  path.rs  platform.rs  remap.rs  resolve.rs  rlimit.rs  srcfiles.rs  subtarget.rs  tp_metadata.rs  universe.rs  unused.rs  vendor.rs  version_naming.rs
src/fixups/: buildscript.rs  config.rs  mod.rs
test/base/: Cargo.toml
test/common/complex/: Cargo.toml
test/common/complex/src/: lib.rs
test/common/simple/: Cargo.toml
test/common/simple-two/: Cargo.toml
test/common/simple/src/: lib.rs
test/common/with_buildscript/: Cargo.toml  build.rs
test/common/with_buildscript/src/: lib.rs
test/extramissingmeta/: Cargo.toml
test/with_fixups/: Cargo.toml
test/with_fixups/fixups/with_buildscript/: fixups.toml
tests/: walk_emfile.rs
