[package]
name = "reindeer"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]

[dependencies]
serde_starlark = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master" }
anyhow = "1.0"
env_logger = "0.7"
globset = "0.4"
ignore = "0.4"
indexmap = { version = "1.3", features = ["serde-1", "rayon"] }
itertools = "0.8"
log = { version = "0.4.8", features = ["kv_unstable"] }
maplit = "1.0"
nom = "5.1"
rayon = "1.2"
rustsec = { version = "0.19", features = ["fix"] }
semver = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
srcfiles = { git = "https://github.com/Areredify/srcfiles.git", rev = "349a321a132e025e13efe09c3515fe2e56c70ff6" }
structopt = "0.3.7"
termcolor = "1.0"
toml = "=0.5.6"
walkdir = "2.2.9"
