[package]
name = "reindeer"
version = "0.0.0"
authors = ["Facebook"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
env_logger = "0.7"
globset = "0.4.7"
ignore = "0.4"
indexmap = { version = "1.6", features = ["rayon", "serde-1"] }
itertools = "0.10.1"
log = { version = "0.4.8", features = ["kv_unstable"] }
nom = "6.1"
rayon = "1.2"
rustsec = { version = "0.23.3", features = ["fix"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde_starlark = { version = "0.1.0", git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master" }
spdx = "0.3"
srcfiles = { git = "https://github.com/Areredify/srcfiles.git", rev = "349a321a132e025e13efe09c3515fe2e56c70ff6" }
structopt = "0.3.21"
termcolor = "1.0"
toml = "=0.5.7"
walkdir = "2.2.9"
